static/style.css
body{
	background-color: rgb(245,240,255);
	margin:0;

}
p{
	font-family: "calibri", serif, Times;
	color: rgb(68, 68, 68);
	margin-left: 16px;
	margin-right: 16px;
	font-size:18px;
}
h1{
	color: rgb(68, 68, 68);
	font-family: "calibri", serif, Times;
	padding-bottom: 0px;
	margin-bottom: -20px;
	margin-left: 65px;
	font-size: 250%;
}
h2{
	margin-left: 16px;
	margin-right: 16px;
	color: rgb(68, 68, 68);
	font-family: "calibri", serif, Times;
	clear: both;
	
}
h3{
	font-size:22px;
}
img{
	width=70%;
	height=70%;

}

a {
	color: #FFFFFF;
}

td {
	padding: 30px;
}

#schoolInfo{
	text-align: center;
	display: block;
	overflow:hidden;
	padding-top: 15px;
	padding-bottom: 10px;
	text-align: left;
	float:left;
	padding-left: 10px;
	margin-left: 15px;
}
#attribute{
	background-color: rgb(255, 255, 255);
	width: 350px;
	padding-top: 15px;
	padding-bottom: 10px;
	text-align: left;
	float:left;
	padding-left: 45px;
	margin-left: 15px;
	height:750px;
	
}
#demographic{
	background-color: rgb(255, 255, 255);
	width: 400px;
	padding-top: 15px;
	padding-bottom: 10px;
	padding-left: 45px;
	margin-left: 15px;
	text-align: left;
	float:left;
	overflow: hidden;
	height:750px;
	
}
#general{
	background-color: rgb(168,198,254);
	width: 400px;
	padding-top: 15px;
	padding-bottom: 10px;
	padding-left: 0px;
	padding-right: 10px;
	text-align: left;
	color: rgb(68,68,68);
	float:left;
	height:750px;
	display: inline-block;
	overflow:hidden;
}
#banner{
	
	z-index: -1;
	left:0;
	width:100%;
	height:100px;
	min-height: 100px;
	margin:0 auto;
	min-width:500px;
	text-align: left;
	display: inline;
	background-color: rgb(68, 68, 68);
	border: none;
}
#selections{
	text-align: center;
	width:960px;
}
#querytable{
	text-align: center;
	width:700px;
	margin-left: 25%;
}
#map{
	background-color: rgb(168,198,254);
	width: 300px;
	
	
}
#header{
	background-color: rgb(255,255,255);
	margin-top: -25px;
}

#headerbackground{
	background-image: url("mirror.png");
	background-repeat: repeat-x;
	height: 80px;
}
#mirror{
	
	min-height: 85px;
	border: none;
	margin:0 auto;
	padding-left: 65px;
	font-size: 250%;
	color: rgb(68, 68, 68);
	font-family: "calibri", serif, Times;
}
#title{
	min-width:900px;
	margin-left:100px;
	color: rgb(255, 255, 255);
}
#top{
	background-color: rgb(255,255,255);
 	display: inline;
 	width:100%;
 	padding-top: 50px;
 	padding-bottom: 10px;
}
 #menu{
 	top: 180px;
 	width:100%;
 	height:50px;
 	
 	margin-top: 10px;
 	

 }
 

#about{
	width:500px;
	height:500px;
	background-color: rgb(255,255,255);
 	text-align: center;
 	margin-top: 25px;
 	padding-left: 200px;
 	margin-left: 20%;
 	margin-bottom:150px;
 	overflow: auto;
 	padding-right:250px;
}

#visualizations{
	padding-left: 50px;
	min-width: 960px;
}

#filter{
	float: left;
	width: 450px;
	height: 290px;
	background-color: rgb(76, 137, 233);
	color: #FFFFFF;
	margin-bottom: 50px;
	margin-left: 15px;
	padding-top: 10px;
}

#configure{
	padding-left: 15px;
	font-size: 120%;
}

#chart{
	width: 700px;
	height: 300px;
	float: left;
}

#table{
	margin-left: 15px;
	padding-right: 65px;
}

label{
	display: inline-block;
	width: 200px;
	color: #FFFFFF;
	line-height: 70px;
}

#bottom{
	background-image: url("mirror.png");
	background-repeat: repeat-x;
 	position: absolute;
 	display: inline;
 	width:100%;
 	padding-top: 50px;
 	padding-bottom: 10px;

}
.whiteP{
	color:rgb(68,68,68);
}
.classname {
	-moz-box-shadow:inset 0px 1px 0px 0px #bbdaf7;
	-webkit-box-shadow:inset 0px 1px 0px 0px #bbdaf7;
	box-shadow:inset 0px 1px 0px 0px #bbdaf7;
	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #79bbff), color-stop(1, #225ad4) );
	background:-moz-linear-gradient( center top, #79bbff 5%, #225ad4 100% );
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#79bbff', endColorstr='#225ad4');
	background-color:#79bbff;
	-moz-border-radius:6px;
	-webkit-border-radius:6px;
	border-radius:6px;
	border:1px solid #84bbf3;
	display:inline-block;
	color:#ffffff;
	font-family:arial;
	font-size:15px;
	font-weight:bold;
	padding:6px 24px;
	text-decoration:none;
	text-shadow:1px 1px 0px #528ecc;
	margin-left: 15px;
	margin-top: 0px;
}.classname:hover {
	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #225ad4), color-stop(1, #79bbff) );
	background:-moz-linear-gradient( center top, #225ad4 5%, #79bbff 100% );
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#225ad4', endColorstr='#79bbff');
	background-color:#225ad4;
}.classname:active {
	position:relative;
	top:1px;
}

